--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
-                            2215 John Daniel Drive
+                            Diagonal 113 63 y 64 
                             <br />
-                            Clark, MO 65243
+                            CC67, 1900 La Plata, Argentina
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
@@ -232,7 +232,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright © Your Website 2020</small></div>
+            <div class="container"><small>Copyright © TC 2021</small></div>
         </div>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed">
