--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Tobías Canavesi is in love with mathematics, the universe and artificial intelligence. After finishing his degree in astronomy, he has become a PhD student in theoretical physics with a scholarship granted by the Argentine National Council of Scientific and Technical Research. He enjoys working with people from different areas because he believes that multidisciplinary research is vital for the advancement of society. Some of his hobbies are playing and collecting retro games, programming, reading and imagining about the future.</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">Tobías Canavesi is in love with mathematics, the universe and artificial intelligence. After finishing his degree in astronomy, he has become a PhD student in theoretical physics with a scholarship granted by the Argentine National Council of Scientific and Technical Research.</p></div>
+                     <div class="col-lg-4 ml-auto"><p class="lead">He enjoys working with people from different areas because he believes that multidisciplinary research is vital for the advancement of society. Some of his hobbies are playing and collecting retro games, programming, reading and imagining about the future.</p></div>
                 </div>
                 <!-- About Section Button-->
             </div>
