--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">Log Cabin</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">Holographic Neutron Stars</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -245,9 +245,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cabin.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/neutron.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5"> We study the thermodynamics of a self-gravitating system of neutral fermions at finite temperature and analyze its backreaction in an asymptotically AdS space. We evaluate numerically the free entropy as a function of temperature, and perform a stability analysis applying the simpler and powerful graphical method referred as the Katz criterion. We found that for highly-enough degenerate fermionic solutions, the onset of thermodynamic instability arises, though prior to the turning point on the mass as a function of the central density. Our results for finite temperature fermions provide a novel and more general way to study the confinement to deconfinement phase transition in the holographic field theory, generalizing former conclusions developed for systems at zero temperature.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
