--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/wormholefpost.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">I am currently working as a collaborator at Wolfram Physics Projects (WPP). I am currently exploring how to relate continuous groups to discrete groups in the context of the WPP.</p>
+                                    <p class="mb-5">I am currently working as a collaborator at Wolfram Physics Projects (WPP). One of my areas of research at the moment consists in  exploring how to relate continuous groups to discrete groups in the context of the WPP.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
