--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/safe.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/clusters.png" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -373,7 +373,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Locked Safe</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Embedded clusters: upgrading visual and infrared photometric analysis with Gaia DR2 and ASteCA</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -381,9 +381,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/safe.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/clusters.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5">Embedded clusters are groups of stars which have not dispersed yet the residual of the parental cloud where they were born so getting precise distances and properties of these groups turns out to be an essential task. We present results for five embedded clusters: [DBS2003]5, [DBS2003]60, [DBS2003]98, [DBS2003]116 and [DBS2003]117. Results come from a combination of deep CCD UBVI photometry suitable to identify blue faint stars and infrared information from available surveys. In turn photometry was linked with proper motions and parallaxes from Gaia DR2. Each object was treated in a multi-space using ASteCA, a code especially designed to perform an automatic data analysis and aimed at providing the fundamental parameters of star groups, in case they compose a real entity.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
