--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/galaxies.png" alt="" />
                         </div>
                     </div>
                 </div>
@@ -247,7 +247,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/neutron.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5"> We study the thermodynamics of a self-gravitating system of neutral fermions at finite temperature and analyze its backreaction in an asymptotically AdS space. We evaluate numerically the free entropy as a function of temperature, and perform a stability analysis applying the simpler and powerful graphical method referred as the Katz criterion. We found that for highly-enough degenerate fermionic solutions, the onset of thermodynamic instability arises, though prior to the turning point on the mass as a function of the central density. Our results for finite temperature fermions provide a novel and more general way to study the confinement to deconfinement phase transition in the holographic field theory, generalizing former conclusions developed for systems at zero temperature.</p>
+                                    <p class="mb-5"> We study the thermodynamics of a self-gravitating system of neutral fermions at finite temperature and analyze its backreaction in an asymptotically AdS space. We evaluate numerically the free entropy as a function of temperature, and perform a stability analysis applying the simpler and powerful graphical method referred as the Katz criterion. We found that for highly-enough degenerate fermionic solutions, the onset of thermodynamic instability arises, though prior to the turning point on the mass as a function of the central density. Our results for finite temperature fermions provide a novel and more general way to study the confinement to deconfinement phase transition in the holographic field theory, generalizing former conclusions developed for systems at zero temperature. <a href="https://arxiv.org/pdf/1911.02554.pdf"> Link!</a> </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -281,7 +281,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/wormholefpost.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">I am currently working as a collaborator at Wolfram Physics Projects (WPP). One of my areas of research at the moment consists in  exploring how to relate continuous groups to discrete groups in the context of the WPP.</p>
+                                    <p class="mb-5">I am currently working as a collaborator at Wolfram Physics Projects (WPP). One of my areas of research at the moment consists in  exploring how to relate continuous groups to discrete groups in the context of the WPP. <a href="https://www.wolframphysics.org"> Link!</a> </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -315,7 +315,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cubos.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Considering the GAIA data for about 1000000 stars around the barycenter, we estimate the fractal dimension for different regions in the Milky Way. Then we use those fractal dimensions to calculate the gravitational potential considering the medium as a continuous fractal. Finally, we use the gravitational potential to infer the circular velocity and adjust rotation curves in the Milky Way. For this, we use two numerical models, the first considering uniform density and a second more realistic of a bulge and a disk. In none of these models we consider dark matter. We study their validity comparing them with circular speed data from the Milky Way.</p>
+                                    <p class="mb-5">Considering the GAIA data for about 1000000 stars around the barycenter, we estimate the fractal dimension for different regions in the Milky Way. Then we use those fractal dimensions to calculate the gravitational potential considering the medium as a continuous fractal. Finally, we use the gravitational potential to infer the circular velocity and adjust rotation curves in the Milky Way. For this, we use two numerical models, the first considering uniform density and a second more realistic of a bulge and a disk. In none of these models we consider dark matter. We study their validity comparing them with circular speed data from the Milky Way. <a href="http://www.astronomiaargentina.org.ar/b61b/2020BAAA...61B...136C.pdf"> Link!</a> </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -349,7 +349,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/eagle.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Several two-dimensional studies in spiral galaxies show that HII star formation regions have a fractal distribution, with a fractal dimension of approximately 2.3. In this work, the fractal dimension is calculated through the box-counting method implemented in an R code. The innovation of the work lies in calculating the fractal dimension directly in 3 dimensions, without the need for the use of projections, using position and distance data from Gaia (Data version 2). The estimated fractal dimension for the regions studied in the Milky Way are 2.468 (M16), 2.126 (Orion Nebula) and 2.435 (RCW 38).</p>
+                                    <p class="mb-5">Several two-dimensional studies in spiral galaxies show that HII star formation regions have a fractal distribution, with a fractal dimension of approximately 2.3. In this work, the fractal dimension is calculated through the box-counting method implemented in an R code. The innovation of the work lies in calculating the fractal dimension directly in 3 dimensions, without the need for the use of projections, using position and distance data from Gaia (Data version 2). The estimated fractal dimension for the regions studied in the Milky Way are 2.468 (M16), 2.126 (Orion Nebula) and 2.435 (RCW 38). <a href="http://www.astronomiaargentina.org.ar/b61b/2020BAAA...61B...254C.pdf"> Link!</a> </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -383,7 +383,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/clusters.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Embedded clusters are groups of stars which have not dispersed yet the residual of the parental cloud where they were born so getting precise distances and properties of these groups turns out to be an essential task. We present results for five embedded clusters: [DBS2003]5, [DBS2003]60, [DBS2003]98, [DBS2003]116 and [DBS2003]117. Results come from a combination of deep CCD UBVI photometry suitable to identify blue faint stars and infrared information from available surveys. In turn photometry was linked with proper motions and parallaxes from Gaia DR2. Each object was treated in a multi-space using ASteCA, a code especially designed to perform an automatic data analysis and aimed at providing the fundamental parameters of star groups, in case they compose a real entity.<a href="https://www.w3schools.com/">Visit W3Schools.com!</a> </p>
+                                    <p class="mb-5">Embedded clusters are groups of stars which have not dispersed yet the residual of the parental cloud where they were born so getting precise distances and properties of these groups turns out to be an essential task. We present results for five embedded clusters: [DBS2003]5, [DBS2003]60, [DBS2003]98, [DBS2003]116 and [DBS2003]117. Results come from a combination of deep CCD UBVI photometry suitable to identify blue faint stars and infrared information from available surveys. In turn photometry was linked with proper motions and parallaxes from Gaia DR2. Each object was treated in a multi-space using ASteCA, a code especially designed to perform an automatic data analysis and aimed at providing the fundamental parameters of star groups, in case they compose a real entity. <a href="http://www.astronomiaargentina.org.ar/b61b/2020BAAA...61B...108G.pdf"> Link!</a> </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -407,7 +407,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Submarine</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Observational evidence of fractality in the large-scale distribution of galaxies</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -415,9 +415,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/galaxies.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5">Using a sample of 133 991 galaxies distributed in the sky region 100◦ < α < 270◦ and 7◦ < δ < 65◦, extracted from the SDSS NASA/AMES Value Added Galaxy Catalog (AMES-VAGC), we estimate the fractal dimension using two different methods. First, using an algorithm to estimate the correlation dimension. The second method, in a novel approach, creates a graph from the data and estimates the graph dimension purely from connectivity information. In both methods we found a dimension D ≈ 2 in scales below 20 Mpc, which agrees with previous works. This result shows the non-homogeneity of galaxies distribution at certain scales. <a href="https://arxiv.org/pdf/2102.09010.pdf"> Link!</a> </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
