--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <section class="page-section" id="contact">
             <div class="container">
                 <!-- Contact Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Get in Touch</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -152,8 +152,6 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Contact Section Form-->
-                <div id="contact">
-                        <h2>Get in Touch</h2>
                          <div id="contact-form">
                                 <form action="https://formspree.io/f/mgepgzqd" method="POST">
                                 <input type="hidden" name="_subject" value="Contact request from personal website" />
