--- a/index.html
+++ b/index.html
@@ -142,26 +142,17 @@
         </section>
         <!-- Contact Section-->
         <section class="page-section" id="contact">
-            <div class="container">
-                <!-- Contact Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Get in Touch</h2>
-                <!-- Icon Divider-->
-                <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
-                </div>
-                <!-- Contact Section Form-->
-                         <div id="contact-form">
-                                <form action="https://formspree.io/f/mgepgzqd" method="POST">
-                                <input type="hidden" name="_subject" value="Contact request from personal website" />
-                                 <input type="email" name="_replyto" placeholder="Your email" required>
-                                <textarea name="message" placeholder="Type your message" required></textarea>
-                                <button type="submit">Send</button>
-                            </form>
-                        </div>
-                 </div>
-            </div>
+            <div id="contact">
+        <h2>Get in Touch</h2>
+        <div id="contact-form">
+                <form action="https://formspree.io/f/mgepgzqd" method="POST">
+                <input type="hidden" name="_subject" value="Contact request from personal website" />
+                <input type="email" name="_replyto" placeholder="Your email" required>
+                <textarea name="message" placeholder="Type your message" required></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </div>
+    </div>
         </section>
         <!-- Footer-->
         <footer class="footer text-center">
