--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <!-- Contact Section-->
         <section class="page-section" id="contact">
             <div id="contact">
-        <h2>Get in Touch</h2>
+        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Get in Touch</h2>
         <div id="contact-form">
                 <form action="https://formspree.io/f/mgepgzqd" method="POST">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
