--- a/index.html
+++ b/index.html
@@ -144,15 +144,24 @@
         <section class="page-section" id="contact">
             <div id="contact">
         <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Get in Touch</h2>
-        <div id="contact-form">
-                <form action="https://formspree.io/f/mgepgzqd" method="POST">
-                <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
-                <textarea name="message" placeholder="Type your message" required></textarea>
-                <button type="submit">Send</button>
-            </form>
-        </div>
-    </div>
+        <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <div class="row">
+                        <div class="col-lg-8 mx-auto">
+                         <div id="contact-form">
+                            <form action="https://formspree.io/f/mgepgzqd" method="POST">
+                            <input type="hidden" name="_subject" value="Contact request from personal website" />
+                            <input type="email" name="_replyto" placeholder="Your email" required>
+                            <textarea name="message" placeholder="Type your message" required></textarea>
+                            <button type="submit">Send</button>
+                            </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </section>
         <!-- Footer-->
         <footer class="footer text-center">
