--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">Fractal dimension in star formation regions</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">Detecting Fishing Activity and Fishing Gear Types Based on Spatial-temporal Vessel Characteristics from AIS Data</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -318,9 +318,10 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/eagle.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/isfishing.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Sesadasdsaasddsain spiral galaxies show that HII star formation regions have a fractal distribution, with a fractal dimension of approximately 2.3. In this work, the fractal dimension is calculated through the box-counting method implemented in an R code. The innovation of the work lies in calculating the fractal dimension directly in 3 dimensions, without the need for the use of projections, using position and distance data from Gaia (Data version 2). The estimated fractal dimension for the regions studied in the Milky Way are 2.468 (M16), 2.126 (Orion Nebula) and 2.435 (RCW 38). <a href="http://www.astronomiaargentina.org.ar/b61b/2020BAAA...61B...254C.pdf"> Link!</a> </p>
+                                    <p class="mb-5"> 
+                                        Using the data provided by Global Fishing Watch we trained a classifier to detect the type of fishing being done using AIS data. We created a model to estimate the fishing Effort is the amount of fishing gear of a specific type used on the fishing grounds over a given unit of time. <a href="http://www.astronomiaargentina.org.ar/b61b/2020BAAA...61B...254C.pdf"> Link!</a> </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
