--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/eagle.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/isfishing.png" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -321,7 +321,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/isfishing.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5"> 
-                                        Using the data provided by Global Fishing Watch we trained a classifier to detect the type of fishing being done using AIS data. We created a model to estimate the fishing Effort is the amount of fishing gear of a specific type used on the fishing grounds over a given unit of time. <a href="http://www.astronomiaargentina.org.ar/b61b/2020BAAA...61B...254C.pdf"> Link!</a> </p>
+                                        Using the data provided by Global Fishing Watch we trained a classifier to detect the type of fishing being done using AIS data. We created a model to estimate the fishing Effort is the amount of fishing gear of a specific type used on the fishing grounds over a given unit of time. <a href="https://github.com/tobiascanavesi/vesseldetector"> Link!</a> </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
