--- a/index.html
+++ b/index.html
@@ -163,6 +163,19 @@
                     </div>
                 </div>
         </section>
+                <!-- Resume Section-->
+                <section class="page-section" id="resume">
+                    <div id="resume">
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Resume</h2>
+                <div class="divider-custom">
+                            <div class="divider-custom-line"></div>
+                            <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                            <div class="divider-custom-line"></div>
+                        </div>
+                        <div class="row">
+                            <a class="btn line-btn-dark btn-icon btn-radius" href="assets/pdf/cv_english.pdf" title="Resume" download>
+                        </div>
+                </section>
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container">
