--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
                         </div>
                     <div class="row">
                             <a class="btn line-btn-dark btn-icon btn-radius" href="assets/pdf/cv_english.pdf" title="Resume" download>
-                    </div>
+                                <p class="masthead-subheading font-weight-light mb-0">Download</p>
+                            </div>
         </section>
         <!-- Footer-->
         <footer class="footer text-center">
