--- a/index.html
+++ b/index.html
@@ -165,19 +165,23 @@
                 </div>
         </section>
                 <!-- Resume Section-->
-        <section class="page-section" id="resume">
-                    <div id="resume">
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Resume</h2>
-                <div class="divider-custom">
+                <section class="page-section bg-primary text-white mb-0" id="resume">
+                    <div class="container">
+                        <!-- Resume Section Heading-->
+                        <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+                        <!-- Icon Divider-->
+                        <div class="divider-custom divider-light">
                             <div class="divider-custom-line"></div>
                             <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                             <div class="divider-custom-line"></div>
                         </div>
-                    <div class="row">
-                            <a class="btn line-btn-dark btn-icon btn-radius" href="assets/pdf/cv_english.pdf" title="Resume" download>
-                                <p class="masthead-subheading font-weight-light mb-0">Download</p>
-                            </div>
-        </section>
+                        <!-- About Section Content-->
+                        <a href="/assets/pdf/cv_english.pdf" download>
+                            <img src="assets/img/download-icon.png" alt="Resume" width="104" height="142">
+                          </a>
+                        <!-- About Section Button-->
+                    </div>
+                </section>
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container">
