--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <section class="page-section bg-primary text-white mb-0" id="resume">
                     <div class="container">
                         <!-- Resume Section Heading-->
-                        <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+                        <h2 class="page-section-heading text-center text-uppercase text-white">Resume</h2>
                         <!-- Icon Divider-->
                         <div class="divider-custom divider-light">
                             <div class="divider-custom-line"></div>
