--- a/index.html
+++ b/index.html
@@ -176,9 +176,12 @@
                             <div class="divider-custom-line"></div>
                         </div>
                         <!-- About Section Content-->
-                        <a href="/assets/pdf/cv_english.pdf" download>
-                            <img src="assets/img/download-icon.png" alt="Resume" width="104" height="142">
-                          </a>
+                        <div class="row">
+                            <a href="/assets/pdf/cv_english.pdf" download>
+                                <img src="assets/img/download-icon.png" alt="Resume" width="104" height="142">
+                            </a>
+                        </div>
+
                         <!-- About Section Button-->
                     </div>
                 </section>
