--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
-                            Diagonal 113 63 y 64 
+                            Vicente Lopez 
                             <br />
-                            CC67, 1900 La Plata, Argentina
+                            1636 Olivos, Argentina
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
