--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
                                     <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">Wolfram Physics Project</h2>
-                                    <!-- Icon Divider-->
+                                    <!-- Icson Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
