new projects update

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/isfishing.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5"> 
-                                        Using the data provided by Global Fishing Watch we trained a classifier to detect the type of fishing being done using AIS data. We created a model to estimate the fishing Effort is the amount of fishing gear of a specific type used on the fishing grounds over a given unit of time. <a href="https://github.com/tobiascanavesi/vesseldetector"> Link!</a> </p>
+                                        Using the data provided by Global Fishing Watch we trained a classifier to detect the type of fishing being done using AIS data. We created a model to estimate the fishing Effort as the amount of fishing gear of a specific type used on the fishing grounds over a given unit of time. </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -365,7 +365,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Embedded clusters: upgrading visual and infrared photometric analysis with Gaia DR2 and ASteCA</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Mining Industry</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -375,7 +375,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/clusters.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Embedded clusters are groups of stars which have not dispersed yet the residual of the parental cloud where they were born so getting precise distances and properties of these groups turns out to be an essential task. We present results for five embedded clusters: [DBS2003]5, [DBS2003]60, [DBS2003]98, [DBS2003]116 and [DBS2003]117. Results come from a combination of deep CCD UBVI photometry suitable to identify blue faint stars and infrared information from available surveys. In turn photometry was linked with proper motions and parallaxes from Gaia DR2. Each object was treated in a multi-space using ASteCA, a code especially designed to perform an automatic data analysis and aimed at providing the fundamental parameters of star groups, in case they compose a real entity. <a href="http://www.astronomiaargentina.org.ar/b61b/2020BAAA...61B...108G.pdf"> Link!</a> </p>
+                                    <p class="mb-5">   Creation of a water use optimization model. </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
