--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Observational evidence of fractality in the large-scale distribution of galaxies</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Demand Forecasting</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -407,9 +407,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/galaxies.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/financial-diagrams.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Using a sample of 133 991 galaxies distributed in the sky region 100◦ < α < 270◦ and 7◦ < δ < 65◦, extracted from the SDSS NASA/AMES Value Added Galaxy Catalog (AMES-VAGC), we estimate the fractal dimension using two different methods. First, using an algorithm to estimate the correlation dimension. The second method, in a novel approach, creates a graph from the data and estimates the graph dimension purely from connectivity information. In both methods we found a dimension D ≈ 2 in scales below 20 Mpc, which agrees with previous works. This result shows the non-homogeneity of galaxies distribution at certain scales. <a href="https://arxiv.org/pdf/2102.09010.pdf"> Link!</a> </p>
+                                    <p class="mb-5">Design, implementation and evaluation of machine learning models for time series forecasting for a big beverage company. Forecast performance analysis comparing ML and time series models. </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
