--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/galaxies.png" alt="" />
+                            <img class="img-fluid" src="assets\img\portfolio\financial-diagrams.jpg" alt="" />
                         </div>
                     </div>
                 </div>
