--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/clusters.png" alt="" />
+                            <img class="img-fluid" src="assets\img\portfolio\truck.jpg" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -373,7 +373,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/clusters.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets\img\portfolio\truck.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">   Creation of a water use optimization model. </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
